<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tv_mainLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/log_in_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_mainUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_title_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_mainUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/username_hint_mssg"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textColorHint="#666666" />

        <TextView
            android:id="@+id/tv_mainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_title_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_mainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/password_hint_mssg"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textColorHint="#666666" />

        <Button
            android:id="@+id/bt_mainLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:onClick="login"
            android:text="@string/log_in_button_title"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/bt_mainRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00C9E3"
            android:onClick="registerUser"
            android:text="@string/register_button_title"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="143dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />
</androidx.constraintlayout.widget.ConstraintLayout>