<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyVehicleActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/bt_modifyVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:onClick="modifyVehicle"
            android:text="@string/modify_button_title"
            tools:text="@string/modify_button_title" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="#555555"
            android:onClick="goBack"
            android:text="Button"
            tools:text="@string/return_button_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="662dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/tv_modifyTitleLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_brand_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/title_license_plate_mssg" />

        <EditText
            android:id="@+id/et_modifyLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_modifyTitleBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_brand_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_modifyBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_modifyTitleModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_model_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_modifyModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_modifyTitleAutonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tile_autonomy_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_modifyAutonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_modifyTitleHybrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_hybrid_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_modifyHybrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>